Ajustes + Criação Main, Footer e styles de ambos + Responsividade + Script +  Entrada de info no Main

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,12 @@ body {
   background-color: var(--secondarycolor);
 }
 
-.header, .footer {
+.width {
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.header {
   background-color: var(--primarycolor);
   transition: .5s;
 }
@@ -35,11 +40,16 @@ body {
 
 .header {
   padding: 1em 1.5em;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 .header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 auto;
 }
 .header .container .brand {
   font-size: 1.3em;
@@ -81,6 +91,179 @@ body {
   color: var(--backgroundcolor);
   background-color: var(--primarycolor);
   outline: 1px solid var(--bordercolor);
+}
+
+@media (max-width: 850px) {
+  .header .container {
+    flex-direction: column;
+  }
+  .header .container .brand {
+    font-size: 1.4em;
+    margin-bottom: .6em;
+  }
+  .header .container .navbar ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5em;
+  }
+  .header .container .navbar ul li a {
+    font-size: .8em;
+  }
+}
+@media (max-width: 370px) {
+  .header .container {
+    flex-direction: column;
+  }
+  .header .container .brand {
+    font-size: 1.2em;
+    margin-bottom: .6em;
+  }
+  .header .container .navbar ul li a {
+    font-size: .7em;
+  }
+}
+.main {
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 2em;
+  margin: 3.7em 0 5.4em;
+  transition: 1s;
+}
+.main .width_main {
+  width: 50vw;
+  margin: 0 auto;
+  transition: 1s;
+}
+.main .width_main .main_info {
+  background-color: var(--backgroundcolor);
+  padding: 1em;
+  border-radius: 20px;
+  box-shadow: 2.5px 5px 10px var(--bordercolor);
+  border-top: 1px solid #bebebe;
+  border-bottom: 1px solid #bebebe;
+  transition: 1s;
+}
+.main .width_main .main_info .introducion {
+  font-size: .92em;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.7em;
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  transition: 1s;
+  margin: .5em 0;
+}
+.main .width_main .main_info .text-e {
+  display: flex;
+  justify-content: end;
+  margin-top: .5em;
+  overflow-x: hidden;
+  word-wrap: break-word;
+}
+.main .width_main .main_info .text-e .text-en {
+  font-size: .92em;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.7em;
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  transition: 1s;
+  text-align: left;
+  background-color: var(--bordercolor);
+  max-width: 75%;
+  width: auto;
+  border-radius: 20px;
+  padding: .5em 1em;
+}
+
+@media (max-width: 850px) {
+  .main {
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 2em;
+    margin: 6em 0 4.78em;
+  }
+  .main .width_main {
+    width: 70vw;
+    margin: 0 auto;
+    transition: 1s;
+  }
+  .main .width_main .main_info {
+    background-color: var(--backgroundcolor);
+    padding: 1em;
+    border-radius: 20px;
+  }
+  .main .width_main .main_info .introducion {
+    font-size: .92em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1.84em;
+    letter-spacing: 1.5px;
+    font-weight: 400;
+  }
+}
+footer.active {
+  background-color: var(--backgroundcolor);
+}
+
+.footer {
+  padding: 1em 1.5em;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  gap: 20px;
+  transition: .5s;
+  background-color: var(--primarycolor);
+}
+.footer .dataentry {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+  border-radius: 2em;
+  background-color: #ededed;
+  width: 50vw;
+  transition: 1s;
+}
+.footer .dataentry .input-dataentry {
+  outline: none;
+  border: none;
+  padding: 1em;
+  width: 75%;
+  font-size: 1em;
+  background-color: transparent;
+  margin-left: 2dvw;
+  transition: 1s;
+}
+.footer .dataentry .submit {
+  background-image: url(../images/entrar.png);
+  background-size: cover;
+  background-color: transparent;
+  width: 2em;
+  height: 2em;
+  border: none;
+  cursor: pointer;
+  margin-right: 2dvw;
+  transition: 1s;
+  opacity: .5;
+}
+
+@media (max-width: 850px) {
+  .footer {
+    padding: .8em 1em;
+  }
+  .footer .dataentry {
+    gap: 1em;
+  }
+  .footer .dataentry .input-dataentry {
+    font-size: .7em;
+  }
+  .footer .dataentry .submit {
+    width: 1.5em;
+    height: 1.5em;
+    margin-right: 2.5dvw;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
