--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: #33333360;
+  background-color: #33333335;
 }
 .modallogin .modal-content {
   background-color: var(--secondarycolor);
@@ -46,6 +46,9 @@ body {
   width: 50%;
   max-width: 450px;
   border-radius: 10px;
+}
+.modallogin .modal-content h2 {
+  margin-bottom: 5px;
 }
 .modallogin .modal-content .close-btn {
   color: var(--closebutton);
@@ -66,6 +69,22 @@ body {
   padding: 10px;
   margin: 8px 0;
   box-sizing: border-box;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid black;
+  transition: 1s;
+}
+.modallogin .modal-content form input[type="text"]:invalid:focus {
+  border-bottom: 1px solid var(--closebutton);
+}
+.modallogin .modal-content form input[type="text"]:valid:focus {
+  border-bottom: 1px solid var(--savebuttonactive);
+}
+.modallogin .modal-content form input[type="password"]:invalid:focus {
+  border-bottom: 1px solid var(--closebutton);
+}
+.modallogin .modal-content form input[type="password"]:valid:focus {
+  border-bottom: 1px solid var(--savebuttonactive);
 }
 .modallogin .modal-content form .submit-btn {
   width: 100%;
@@ -75,8 +94,82 @@ body {
   border: none;
   cursor: pointer;
   transition: 1s;
+  border-radius: 5px;
 }
 .modallogin .modal-content form .submit-btn:hover {
+  background-color: var(--savebuttonactive);
+}
+
+.modalcadastro {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #33333335;
+  display: none;
+}
+.modalcadastro .modal-content {
+  background-color: var(--secondarycolor);
+  margin: 33dvh auto 0;
+  padding: 20px;
+  border: 1px solid var(--bordercolor);
+  width: 50%;
+  max-width: 450px;
+  border-radius: 10px;
+}
+.modalcadastro .modal-content h2 {
+  margin-bottom: 5px;
+}
+.modalcadastro .modal-content .close-btn {
+  color: var(--closebutton);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 1s;
+}
+.modalcadastro .modal-content .close-btn:hover, .modalcadastro .modal-content .close-btn:focus {
+  color: var(--closebuttonhover);
+  text-decoration: none;
+  cursor: pointer;
+}
+.modalcadastro .modal-content form input[type="text"],
+.modalcadastro .modal-content form input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid black;
+}
+.modalcadastro .modal-content form input[type="text"]:invalid:focus {
+  border-bottom: 1px solid var(--closebutton);
+}
+.modalcadastro .modal-content form input[type="text"]:valid:focus {
+  border-bottom: 1px solid var(--savebuttonactive);
+}
+.modalcadastro .modal-content form input[type="password"]:invalid:focus {
+  border-bottom: 1px solid var(--closebutton);
+}
+.modalcadastro .modal-content form input[type="password"]:valid:focus {
+  border-bottom: 1px solid var(--savebuttonactive);
+}
+.modalcadastro .modal-content form .submit-btn {
+  width: 100%;
+  padding: 10px;
+  background-color: var(--savebuttoncolor);
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: 1s;
+  border-radius: 5px;
+}
+.modalcadastro .modal-content form .submit-btn:hover {
   background-color: var(--savebuttonactive);
 }
 
