--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,6 +15,20 @@
     --closebuttonhover: rgb(255, 34, 34);
 }
 
+// MIXINS
+
+@mixin modalstyle {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #33333335;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -33,15 +47,7 @@ body {
 // Modals Login e Cadastrar
 
 .modallogin {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: #33333360;
+    @include modalstyle;
 
     .modal-content {
         background-color: var(--secondarycolor);
@@ -51,6 +57,10 @@ body {
         width: 50%;
         max-width: 450px;
         border-radius: 10px;
+
+        h2 {
+            margin-bottom: 5px;
+        }
 
         .close-btn {
             color: var(--closebutton);
@@ -69,13 +79,33 @@ body {
         }
 
         form {
-
             input[type="text"],
             input[type="password"] {
                 width: 100%;
                 padding: 10px;
                 margin: 8px 0;
                 box-sizing: border-box;
+                outline: none;
+                border: none;
+                border-bottom: 1px solid black;
+
+                transition: 1s;
+            }
+
+            input[type="text"]:invalid:focus {
+                border-bottom: 1px solid var(--closebutton);
+            }
+
+            input[type="text"]:valid:focus {
+                border-bottom: 1px solid var(--savebuttonactive);
+            }
+
+            input[type="password"]:invalid:focus {
+                border-bottom: 1px solid var(--closebutton);
+            }
+
+            input[type="password"]:valid:focus {
+                border-bottom: 1px solid var(--savebuttonactive);
             }
 
             .submit-btn {
@@ -86,6 +116,86 @@ body {
                 border: none;
                 cursor: pointer;
                 transition: 1s;
+                border-radius: 5px;
+
+                &:hover {
+                    background-color: var(--savebuttonactive);
+                }
+            }
+        }
+    }
+}
+
+.modalcadastro {
+    @include modalstyle;
+    display: none;
+
+    .modal-content {
+        background-color: var(--secondarycolor);
+        margin: 33dvh auto 0;
+        padding: 20px;
+        border: 1px solid var(--bordercolor);
+        width: 50%;
+        max-width: 450px;
+        border-radius: 10px;
+
+        h2 {
+            margin-bottom: 5px;
+        }
+
+        .close-btn {
+            color: var(--closebutton);
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 1s;
+
+            &:hover,
+            &:focus {
+                color: var(--closebuttonhover);
+                text-decoration: none;
+                cursor: pointer;
+            }
+        }
+
+        form {
+            input[type="text"],
+            input[type="password"] {
+                width: 100%;
+                padding: 10px;
+                margin: 8px 0;
+                box-sizing: border-box;
+                outline: none;
+                border: none;
+                border-bottom: 1px solid black;
+            }
+
+            input[type="text"]:invalid:focus {
+                border-bottom: 1px solid var(--closebutton);
+            }
+
+            input[type="text"]:valid:focus {
+                border-bottom: 1px solid var(--savebuttonactive);
+            }
+
+            input[type="password"]:invalid:focus {
+                border-bottom: 1px solid var(--closebutton);
+            }
+
+            input[type="password"]:valid:focus {
+                border-bottom: 1px solid var(--savebuttonactive);
+            }
+
+            .submit-btn {
+                width: 100%;
+                padding: 10px;
+                background-color: var(--savebuttoncolor);
+                color: white;
+                border: none;
+                cursor: pointer;
+                transition: 1s;
+                border-radius: 5px;
 
                 &:hover {
                     background-color: var(--savebuttonactive);
