--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,5 @@
+// Gabriel de Barros The Creator
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'); // Monstserrat
 
 :root {
